tests/miniJava/neg/000537_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { false java = 0 ; } }
